syntax = "proto3";

package org.example.ggg.grpc;
option java_package = "org.example.ggg.grpc";
option java_outer_classname = "AuthServiceProto";
option java_multiple_files = true;

service AuthService {
  rpc AuthenticateUser (AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
  string accessToken = 1;
}

message AuthResponse {
  bool success = 1;
  int64 id = 2;
  string username = 3;
  string deliverAddress = 4;
}